docs/3.2.x/getting-started.mdx
---
id: getting-started
title: Getting Started
---

<Box>
  <GettingStartedHero/>

## What's New with NativeBase v3?

<Box maxW="650">

We had clear goals in mind while building version 3. Take a look at some of the new features we added:

<Box mb="4">
<ListItem>

<Text lineHeight="xl">
  <Text
    bold
    _dark={{ color: "coolGray.50" }}
    _light={{ color: "coolGray.900" }}
  >
    Multiplatform
  </Text>{" "}
  : NativeBase supports multiple platforms; android, iOS and web. You can also
  customise properties using platform-specific props.
</Text>

</ListItem>
</Box>
<Box mb="4">
<ListItem>

<Text lineHeight="xl">
  <Text
    bold
    _dark={{ color: "coolGray.50" }}
    _light={{ color: "coolGray.900" }}
  >
    Inherently Beautiful
  </Text>{" "}
  : NativeBase ships with a default theme that provides beautiful components,
  out of the box.
</Text>

</ListItem>
</Box>
<Box mb="4">
<ListItem>

<Text lineHeight="xl">
  <Text
    bold
    _dark={{ color: "coolGray.50" }}
    _light={{ color: "coolGray.900" }}
  >
    Accessible
  </Text>{" "}
  : This version has out of the box accessibility including focus management,
  keyboard navigation and more.
</Text>

</ListItem>
</Box>
<Box mb="4">
<ListItem>

<Text lineHeight="xl">
  <Text
    bold
    _dark={{ color: "coolGray.50" }}
    _light={{ color: "coolGray.900" }}
  >
    Customisable
  </Text>{" "}
  : The default theme can be extended as you desire. You can also customise
  specific components for your app needs.
</Text>

</ListItem>
</Box>

</Box>

</Box>
