docs/3.3.x/getting-started.mdx
---
id: getting-started
title: Getting Started
---

<Box>
  <GettingStartedHero/>

## What's New with NativeBase v3?

<Box maxW="650">

We had clear goals in mind while building version 3. Take a look at some of the new features we added:

<Box mb="4">
<ListItem>

<Text lineHeight="xl">
  <Text
    bold
    _dark={{ color: "coolGray.50" }}
    _light={{ color: "coolGray.900" }}
  >
    Multiplatform
  </Text>{" "}
  : NativeBase supports multiple platforms; android, iOS and web. You can also
  customise properties using platform-specific props.
</Text>

</ListItem>
</Box>
<Box mb="4">
<ListItem>

<Text lineHeight="xl">
  <Text
    bold
    _dark={{ color: "coolGray.50" }}
    _light={{ color: "coolGray.900" }}
  >
    Inherently Beautiful
  </Text>{" "}
  : NativeBase ships with a default theme that provides beautiful components,
  out of the box.
</Text>

</ListItem>
</Box>
<Box mb="4">
<ListItem>

<Text lineHeight="xl">
  <Text
    bold
    _dark={{ color: "coolGray.50" }}
    _light={{ color: "coolGray.900" }}
  >
    Accessible
  </Text>{" "}
  : This version has out of the box accessibility including focus management,
  keyboard navigation and more.
</Text>

</ListItem>
</Box>
<Box mb="4">
<ListItem>

<Text lineHeight="xl">
  <Text
    bold
    _dark={{ color: "coolGray.50" }}
    _light={{ color: "coolGray.900" }}
  >
    Customisable
  </Text>{" "}
  : The default theme can be extended as you desire. You can also customise
  specific components for your app needs.
</Text>

</ListItem>
</Box>

</Box>

## What’s new with gluestack-ui?

<Box mb="4">
  <ListItem>
    <Text lineHeight="xl">
      <Text
        bold
        _dark={{ color: "coolGray.50" }}
        _light={{ color: "coolGray.900" }}
      >
        Improved Performance
      </Text>
      : gluestack-ui helps in enhancing the performance of NativeBase by offering
      a universal and performant styling library, dank.style, which is highly optimized
      with a babel-plugin.
    </Text>
  </ListItem>
</Box>
<Box mb="4">
  <ListItem>
    <Text lineHeight="xl">
      <Text
        bold
        _dark={{ color: "coolGray.50" }}
        _light={{ color: "coolGray.900" }}
      >
        Headless and Independent Components
      </Text>
      : gluestack-ui provides a set of headless and independent components, similar
      to radix-ui, that can be styled in the user’s project as needed.
    </Text>
  </ListItem>
</Box>
<Box mb="4">
  <ListItem>
    <Text lineHeight="xl">
      <Text
        bold
        _dark={{ color: "coolGray.50" }}
        _light={{ color: "coolGray.900" }}
      >
        Easier Maintenance
      </Text>
      : By simplifying the styling engine and component library, gluestack-ui makes
      it easier to maintain and contribute to the library.
    </Text>
  </ListItem>
</Box>
<Box mb="4">
  <ListItem>
    <Text lineHeight="xl">
      <Text
        bold
        _dark={{ color: "coolGray.50" }}
        _light={{ color: "coolGray.900" }}
      >
        Universal Support
      </Text>
      : gluestack-ui is designed to be compatible with React and React Native, covering
      platforms such as Next.js and Expo.
    </Text>
  </ListItem>
</Box>
<Box mb="4">
  <ListItem>
    <Text lineHeight="xl">
      <Text
        bold
        _dark={{ color: "coolGray.50" }}
        _light={{ color: "coolGray.900" }}
      >
        Future-proof
      </Text>
      : With the backing of GeekyAnts and its long-term support commitment, you can
      trust that gluestack-ui will continue to evolve and receive updates to stay
      compatible with the latest versions of React and React Native.
    </Text>
  </ListItem>
</Box>

</Box>
